--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -26,8 +26,8 @@
 		"jimp": "^0.16.1",
 		"lowdb": "^3.0.0",
 		"middie": "^5.3.0",
-		"minimist": "^1.2.5",
-		"node-fetch": "^3.0.0"
+		"node-fetch": "^3.0.0",
+		"pino-pretty": "^7.1.0"
 	},
 	"devDependencies": {
 		"@jest/globals": "^27.2.5",
