--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main]
     paths:
-      - "android/app/build.gradle"
+      - 'android/app/build.gradle'
 
 jobs:
   apk:
@@ -14,8 +14,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
-          distribution: "temurin"
-          java-version: "11"
+          distribution: 'temurin'
+          java-version: '11'
       - run: ./gradlew assembleDebug --stacktrace
         name: build apk
         working-directory: ./android
@@ -34,7 +34,7 @@ jobs:
       - uses: mukunku/tag-exists-action@v1
         id: checkTag
         with:
-          tag: "v${{steps.version.outputs.name}}"
+          tag: 'v${{steps.version.outputs.name}}'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -44,4 +44,4 @@ jobs:
         with:
           files: android/app/build/outputs/apk/debug/app-debug.apk
           fail_on_unmatched_files: true
-          tag_name: "${{steps.version.outputs.name}}"
+          tag_name: '${{steps.version.outputs.name}}'
