--- a/javascript/client/package.json
+++ b/javascript/client/package.json
@@ -12,8 +12,7 @@
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .prettierignore .",
-		"format": "prettier --write --plugin-search-dir=. .",
-		"test": "jest"
+		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"dependencies": {
 		"@js-temporal/polyfill": "^0.2.0",
