--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,8 +58,8 @@ jobs:
         if: ${{ github.event_name == 'push' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: javascript
-          exclude_assets: '**/node_modules,**/src,**/.svelte-kit,**/*.cjs,**/.prettierignore,**/svelte.config.js,**/tsconfig.json,client/static,types-appium-adb,tsconfig.base.json'
+          publish_dir: .
+          exclude_assets: 'android,.github,.vscode,images,scripts,javascript/client/static,javascript/types-appium-adb,**/node_modules,**/src,**/.svelte-kit,**/*.cjs,**/.prettierignore,**/svelte.config.js,**/jest.config.cjs'
           publish_branch: pi-deploy
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
