--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       # - run: ./gradlew testDebugUnitTest
       #   working-directory: ./android
 
-  javscript:
+  javascript:
     runs-on: ubuntu-latest
 
     steps:
@@ -51,3 +51,42 @@ jobs:
 
       # Build production code
       - run: pnpm run build -w
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: javascript-build
+          if-no-files-found: error
+          path: |
+            javascript/client/build/
+            javascript/client/package.json
+            javascript/server/build/
+            javascript/server/.gitignore
+            javascript/server/package.json
+            javascript/types-appium-adb/package.json
+            deploy.gitignore
+            pnpm-lock.yaml
+            pnpm-workspace.yaml
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: javascript
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: pi-deploy
+
+      # Update files to latest build
+      - run: rm -rf javascript
+      - uses: actions/download-artifact@v2
+        with:
+          name: javascript-build
+      - run: mv deploy.gitignore .gitignore
+
+      # Deploy to pi-deploy branch
+      - uses: EndBug/add-and-commit@v7
+        with:
+          branch: pi-deploy
+          message: ''
+          pull: NO-PULL
+          push: true
