--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -31,19 +31,19 @@
 	},
 	"devDependencies": {
 		"@jest/globals": "^27.3.1",
-		"@types/appium-adb": "workspace:*",
-		"@types/node": "^16.11.2",
+		"@types/appium-adb": "8.16.0",
+		"@types/node": "^16.11.6",
 		"@types/semver": "^7.3.9",
 		"@types/teen_process": "^1.16.0",
-		"@typescript-eslint/eslint-plugin": "^5.1.0",
-		"@typescript-eslint/parser": "^5.1.0",
-		"esbuild": "^0.13.8",
+		"@typescript-eslint/eslint-plugin": "^5.3.0",
+		"@typescript-eslint/parser": "^5.3.0",
+		"esbuild": "^0.13.12",
 		"esbuild-jest": "^0.5.0",
-		"eslint": "^8.0.1",
+		"eslint": "^8.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"jest": "^27.3.1",
 		"prettier": "~2.4.1",
-		"svelte": "^3.44.0",
+		"svelte": "^3.44.1",
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.4"
 	}
