--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,10 +13,11 @@
     android:networkSecurityConfig="@xml/network_security_config"
     android:supportsRtl="true"
     android:theme="@style/AppTheme"
-    tools:ignore="GoogleAppIndexingWarning">
+    tools:ignore="GoogleAppIndexingWarning,UnusedAttribute">
     <activity
       android:name="com.tigeroakes.cellwall.client.ui.MainActivity"
       android:label="@string/app_name_main"
+      android:exported="true"
       android:launchMode="singleTop"
       android:theme="@style/AppTheme">
       <intent-filter>
