--- a/javascript/client/package.json
+++ b/javascript/client/package.json
@@ -24,14 +24,17 @@
 		"@jest/globals": "^27.4.6",
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
+		"@tailwindcss/forms": "^0.4.0",
 		"@testing-library/jest-dom": "^5.16.1",
 		"@testing-library/svelte": "^3.0.3",
 		"@types/lodash.startcase": "^4.4.6",
 		"@types/node": "^16.11.19",
+		"@types/tailwindcss": "^3.0.2",
 		"@types/testing-library__jest-dom": "^5.14.2",
 		"@types/ws": "^8.2.2",
 		"@typescript-eslint/eslint-plugin": "^5.9.1",
 		"@typescript-eslint/parser": "^5.9.1",
+		"cross-env": "^7.0.3",
 		"esbuild-jest": "^0.5.0",
 		"eslint": "^8.6.0",
 		"eslint-config-prettier": "^8.3.0",
@@ -45,6 +48,7 @@
 		"svelte-check": "^2.3.0",
 		"svelte-jester": "^2.1.5",
 		"svelte-preprocess": "^4.10.1",
+		"tailwindcss": "^3.0.15",
 		"tslib": "^2.3.1",
 		"typescript": "^4.5.4"
 	}
