--- a/javascript/client/package.json
+++ b/javascript/client/package.json
@@ -16,6 +16,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"@cell-wall/cell-state": "workspace:*",
 		"@js-temporal/polyfill": "^0.3.0",
 		"@types/connect": "^3.4.35",
 		"dotenv": "^16.0.0"
