--- a/javascript/client/tsconfig.json
+++ b/javascript/client/tsconfig.json
@@ -7,5 +7,6 @@
 		},
 		"types": ["@sveltejs/kit"]
 	},
+	"references": [{ "path": "../cell-state" }],
 	"include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.svelte"]
 }
