--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -14,6 +14,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"@cell-wall/cell-state": "workspace:*",
 		"@cell-wall/client": "workspace:*",
 		"@js-temporal/polyfill": "^0.3.0",
 		"@octokit/core": "^3.5.1",
