--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -36,6 +36,7 @@
 		"@types/node": "^16.11.19",
 		"@types/semver": "^7.3.9",
 		"@types/teen_process": "^1.16.0",
+		"@types/ws": "^8.5.1",
 		"@typescript-eslint/eslint-plugin": "^5.12.1",
 		"@typescript-eslint/parser": "^5.12.1",
 		"esbuild": "^0.14.23",
