--- a/javascript/client/package.json
+++ b/javascript/client/package.json
@@ -18,8 +18,8 @@
 	"dependencies": {
 		"@cell-wall/cell-state": "workspace:*",
 		"@js-temporal/polyfill": "^0.3.0",
-		"@types/connect": "^3.4.35",
-		"dotenv": "^16.0.0"
+		"dotenv": "^16.0.0",
+		"lodash.startcase": "^4.4.0"
 	},
 	"devDependencies": {
 		"@jest/globals": "^27.5.1",
@@ -28,22 +28,16 @@
 		"@tailwindcss/forms": "^0.4.0",
 		"@testing-library/jest-dom": "^5.16.2",
 		"@testing-library/svelte": "^3.0.3",
+		"@types/connect": "^3.4.35",
 		"@types/lodash.startcase": "^4.4.6",
-		"@types/node": "^17.0.21",
 		"@types/tailwindcss": "^3.0.9",
 		"@types/testing-library__jest-dom": "^5.14.2",
-		"@types/ws": "^8.5.1",
 		"@typescript-eslint/eslint-plugin": "^5.12.1",
-		"@typescript-eslint/parser": "^5.12.1",
 		"cross-env": "^7.0.3",
 		"esbuild-jest": "^0.5.0",
-		"eslint": "^8.10.0",
-		"eslint-config-prettier": "^8.4.0",
 		"eslint-plugin-svelte3": "^3.4.1",
 		"googleapis": "^95.0.0",
 		"jest": "^27.5.1",
-		"lodash.startcase": "^4.4.0",
-		"prettier": "~2.5.1",
 		"prettier-plugin-svelte": "^2.6.0",
 		"svelte": "^3.46.4",
 		"svelte-check": "^2.4.5",
