--- a/package.yaml
+++ b/package.yaml
@@ -1,12 +1,20 @@
 name: cell-wall
 private: true
-version: 4.0.0
+version: 4.1.0
 scripts:
   start: node javascript/server/build/index.js
-  lint: prettier --check .prettierrc {package,pnpm-workspace}.yaml *.md .github/**/*.yml
-  format: prettier --write .prettierrc {package,pnpm-workspace}.yaml *.md .github/**/*.yml
+  lint: >-
+    prettier --check .prettierrc {package,pnpm-workspace}.yaml *.md
+    .github/**/*.yml
+  format: >-
+    prettier --write .prettierrc {package,pnpm-workspace}.yaml *.md
+    .github/**/*.yml
 devDependencies:
-  prettier: '~2.5.1'
+  '@typescript-eslint/eslint-plugin': ^5.12.1
+  '@typescript-eslint/parser': ^5.12.1
+  eslint: ^8.10.0
+  eslint-config-prettier: ^8.4.0
+  prettier: ~2.5.1
 engines:
   node: '>=16.10.0'
   pnpm: '>=6.16.0'
