--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -27,6 +27,7 @@
 		"middie": "^6.0.0",
 		"node-fetch": "^3.2.0",
 		"pino-pretty": "^7.5.1",
+		"ts-extras": "^0.10.0",
 		"ws": "^8.5.0"
 	},
 	"devDependencies": {
