--- a/javascript/cell-state/package.json
+++ b/javascript/cell-state/package.json
@@ -9,9 +9,11 @@
 		"check": "tsc --project .",
 		"check:watch": "tsc --project . --watch",
 		"lint": "prettier --check . && eslint --ignore-path .prettierignore .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"test": "tsc --project test && node --experimental-vm-modules node_modules/jest/bin/jest.js"
 	},
 	"devDependencies": {
+		"@jest/globals": "^27.5.1",
 		"jest": "^27.5.1",
 		"tslib": "^2.3.1",
 		"typescript": "^4.6.2"
