--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -6,7 +6,7 @@
 	"module": "./build/index.js",
 	"scripts": {
 		"dev": "node esbuild.config.js --dev && node build/dev.js",
-		"build": "node esbuild.config.js",
+		"build": "tsc --project . && node esbuild.config.js",
 		"preview": "node build/index.js",
 		"check": "tsc --project .",
 		"check:watch": "tsc --project . --watch",
