--- a/javascript/cell-state/package.json
+++ b/javascript/cell-state/package.json
@@ -8,8 +8,8 @@
 	"scripts": {
 		"check": "tsc --project .",
 		"check:watch": "tsc --project . --watch",
-		"lint": "prettier --check . && eslint --ignore-path .prettierignore .",
-		"format": "prettier --write .",
+		"lint": "prettier --check . --ignore-path ../.prettierignore && eslint --ignore-path ../.prettierignore .",
+		"format": "prettier --write . --ignore-path ../.prettierignore",
 		"test": "tsc --project test && node --experimental-vm-modules node_modules/jest/bin/jest.js"
 	},
 	"devDependencies": {
