--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,9 @@
 		},
 		"**/*.js.map": {
 			"when": "$(basename)"
-		}
+		},
+		"javascript/cell-state/**/*.d.ts": true,
+		"javascript/env/**/*.d.ts": true
 	},
 	"editor.formatOnSave": true,
 	"search.exclude": {
