--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -17,10 +17,10 @@
 	"dependencies": {
 		"@cell-wall/cell-state": "workspace:*",
 		"@cell-wall/client": "workspace:*",
+		"@cell-wall/env": "workspace:*",
 		"@js-temporal/polyfill": "^0.4.0",
 		"@octokit/core": "^3.6.0",
 		"appium-adb": "^9.2.0",
-		"dotenv": "^16.0.0",
 		"fastify": "^3.27.4",
 		"googleapis": "^96.0.0",
 		"jimp": "^0.16.1",
