--- a/javascript/server/tsconfig.json
+++ b/javascript/server/tsconfig.json
@@ -3,6 +3,6 @@
 	"compilerOptions": {
 		"noEmit": true
 	},
-	"references": [{ "path": "../cell-state" }],
+	"references": [{ "path": "../cell-state" }, { "path": "../env" }],
 	"include": ["src/**/*.d.ts", "src/**/*.ts"]
 }
