--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -15,9 +15,8 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"@cell-wall/cell-state": "workspace:*",
 		"@cell-wall/client": "workspace:*",
-		"@cell-wall/env": "workspace:*",
+		"@cell-wall/shared": "workspace:*",
 		"@js-temporal/polyfill": "^0.4.0",
 		"@octokit/core": "^3.6.0",
 		"appium-adb": "^9.2.0",
