Rewrite google/github clients and websocket server

--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -20,14 +20,15 @@
 		"@js-temporal/polyfill": "^0.4.0",
 		"@octokit/core": "^3.6.0",
 		"appium-adb": "^9.2.0",
+		"dotenv": "^16.0.0",
 		"fastify": "^3.27.4",
-		"googleapis": "^96.0.0",
+		"googleapis": "^97.0.0",
 		"jimp": "^0.16.1",
 		"lowdb": "^3.0.0",
 		"middie": "^6.0.0",
 		"node-fetch": "^3.2.3",
-		"pino-pretty": "^7.5.3",
-		"ts-extras": "^0.10.0",
+		"pino-pretty": "^7.5.4",
+		"ts-extras": "^0.10.1",
 		"ws": "^8.5.0"
 	},
 	"devDependencies": {
@@ -39,7 +40,7 @@
 		"esbuild": "^0.14.26",
 		"esbuild-jest": "^0.5.0",
 		"fastify-http-proxy": "^6.2.2",
-		"fastify-reply-from": "^6.5.0",
+		"fastify-reply-from": "^6.6.0",
 		"jest": "^27.5.1",
 		"svelte": "^3.46.4",
 		"tslib": "^2.3.1",
