--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,6 +88,6 @@ jobs:
       - uses: EndBug/add-and-commit@v7
         with:
           branch: pi-deploy
-          message: ''
+          message: '${{ github.event.head_commit.message }}'
           pull: NO-PULL
           push: true
