--- a/javascript/shared/package.json
+++ b/javascript/shared/package.json
@@ -16,11 +16,12 @@
 		"format": "prettier --write . --ignore-path ../.prettierignore",
 		"test": "tsc --project test && node --experimental-vm-modules node_modules/jest/bin/jest.js"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"tslib": "^2.3.1"
+	},
 	"devDependencies": {
 		"@jest/globals": "^27.5.1",
 		"jest": "^27.5.1",
-		"tslib": "^2.3.1",
 		"typescript": "^4.6.2"
 	}
 }
