--- a/javascript/client/package.json
+++ b/javascript/client/package.json
@@ -17,31 +17,32 @@
 	},
 	"dependencies": {
 		"@cell-wall/shared": "workspace:*",
-		"@js-temporal/polyfill": "^0.4.0",
+		"@js-temporal/polyfill": "^0.4.1",
 		"lodash.startcase": "^4.4.0"
 	},
 	"devDependencies": {
-		"@jest/globals": "^27.5.1",
+		"@jest/globals": "^28.0.3",
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
 		"@tailwindcss/forms": "^0.5.0",
-		"@testing-library/jest-dom": "^5.16.2",
-		"@testing-library/svelte": "^3.1.0",
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/svelte": "^3.1.1",
 		"@types/connect": "^3.4.35",
-		"@types/lodash.startcase": "^4.4.6",
-		"@types/tailwindcss": "^3.0.9",
+		"@types/lodash.startcase": "^4.4.7",
+		"@types/tailwindcss": "^3.0.10",
 		"@types/testing-library__jest-dom": "^5.14.3",
 		"cross-env": "^7.0.3",
 		"esbuild-jest": "^0.5.0",
 		"eslint-plugin-svelte3": "^3.4.1",
-		"jest": "^27.5.1",
-		"prettier-plugin-svelte": "^2.6.0",
-		"svelte": "^3.46.4",
-		"svelte-check": "^2.4.6",
+		"jest": "^28.0.3",
+		"jest-environment-jsdom": "^28.0.2",
+		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "^3.47.0",
+		"svelte-check": "^2.7.0",
 		"svelte-jester": "^2.3.2",
-		"svelte-preprocess": "^4.10.4",
-		"tailwindcss": "^3.0.23",
-		"tslib": "^2.3.1",
-		"typescript": "^4.6.2"
+		"svelte-preprocess": "^4.10.6",
+		"tailwindcss": "^3.0.24",
+		"tslib": "^2.4.0",
+		"typescript": "^4.6.4"
 	}
 }
