--- a/package.yaml
+++ b/package.yaml
@@ -15,4 +15,7 @@ devDependencies:
   eslint: ^8.14.0
   eslint-config-prettier: ^8.5.0
   prettier: ~2.6.2
-engines: { node: '>=16.10.0', pnpm: '>=6.16.0' }
+  typescript: ^4.6.4
+engines:
+  node: '>=16.10.0'
+  pnpm: '>=6.16.0'
