Update connection systems

--- a/javascript/client/tsconfig.json
+++ b/javascript/client/tsconfig.json
@@ -8,5 +8,5 @@
 		"types": ["@sveltejs/kit"]
 	},
 	"references": [{ "path": "../shared" }],
-	"include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.svelte"]
+	"include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.svelte", "jest.setup.ts"]
 }
