--- a/javascript/client/package.json
+++ b/javascript/client/package.json
@@ -6,11 +6,11 @@
 	"exports": "./build/handler.js",
 	"module": "./build/handler.js",
 	"scripts": {
-		"dev": "svelte-kit dev --port 3001",
-		"build": "svelte-kit build",
-		"preview": "svelte-kit preview",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"dev": "vite dev --port 3001",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --ignore-path ../.prettierignore --plugin-search-dir=. . && eslint --ignore-path ../.prettierignore .",
 		"format": "prettier --write --ignore-path ../.prettierignore --plugin-search-dir=. .",
 		"test": "jest"
@@ -22,27 +22,27 @@
 	},
 	"devDependencies": {
 		"@jest/globals": "^28.1.0",
-		"@sveltejs/adapter-node": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/adapter-node": "^1.3.1",
+		"@sveltejs/kit": "^1.22.4",
 		"@tailwindcss/forms": "^0.5.2",
 		"@testing-library/jest-dom": "^5.16.4",
-		"@testing-library/svelte": "^3.1.1",
+		"@testing-library/svelte": "^4.0.3",
 		"@types/connect": "^3.4.35",
 		"@types/lodash.startcase": "^4.4.7",
 		"@types/tailwindcss": "^3.0.10",
 		"@types/testing-library__jest-dom": "^5.14.3",
 		"cross-env": "^7.0.3",
 		"esbuild-jest": "^0.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.32.4",
 		"jest": "^28.1.0",
 		"jest-environment-jsdom": "^28.1.0",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.48.0",
-		"svelte-check": "^2.7.1",
-		"svelte-jester": "^2.3.2",
-		"svelte-preprocess": "^4.10.6",
+		"prettier-plugin-svelte": "^3.0.3",
+		"svelte": "^4.1.2",
+		"svelte-check": "^3.4.6",
+		"svelte-jester": "^3.0.0",
+		"svelte-preprocess": "^5.0.4",
 		"tailwindcss": "^3.0.24",
-		"tslib": "^2.4.0",
-		"typescript": "^4.7.2"
+		"tslib": "^2.6.1",
+		"typescript": "^5.1.6"
 	}
 }
