--- a/javascript/client/package.json
+++ b/javascript/client/package.json
@@ -43,6 +43,7 @@
 		"svelte-preprocess": "^5.0.4",
 		"tailwindcss": "^3.0.24",
 		"tslib": "^2.6.1",
-		"typescript": "^5.1.6"
+		"typescript": "^5.1.6",
+		"vite": "^4.4.8"
 	}
 }
