--- a/javascript/client/package.json
+++ b/javascript/client/package.json
@@ -11,8 +11,8 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check --ignore-path ../.prettierignore --plugin-search-dir=. . && eslint --ignore-path ../.prettierignore .",
-		"format": "prettier --write --ignore-path ../.prettierignore --plugin-search-dir=. .",
+		"lint": "prettier --check --ignore-path ../.prettierignore --plugin=prettier-plugin-svelte . && eslint --ignore-path ../.prettierignore .",
+		"format": "prettier --write --ignore-path ../.prettierignore --plugin=prettier-plugin-svelte .",
 		"test": "jest"
 	},
 	"dependencies": {
