--- a/javascript/client/package.json
+++ b/javascript/client/package.json
@@ -12,7 +12,7 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --ignore-path ../.prettierignore --plugin=prettier-plugin-svelte . && eslint --ignore-path ../.prettierignore .",
-		"format": "prettier --write --ignore-path ../.prettierignore --plugin=prettier-plugin-svelte .",
+		"format": "prettier --write --ignore-path ../.prettierignore --plugin=prettier-plugin-svelte . && eslint --ignore-path ../.prettierignore . --fix",
 		"test": "jest"
 	},
 	"dependencies": {
