Migrate to vitest from jest

--- a/javascript/client/tsconfig.json
+++ b/javascript/client/tsconfig.json
@@ -13,5 +13,5 @@
 		"importHelpers": true
 	},
 	"references": [{ "path": "../shared" }],
-	"include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.svelte", "jest.setup.ts"]
+	"include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.svelte"]
 }
