--- a/javascript/client/package.json
+++ b/javascript/client/package.json
@@ -13,37 +13,33 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --ignore-path ../.prettierignore --plugin=prettier-plugin-svelte . && eslint --ignore-path ../.prettierignore .",
 		"format": "prettier --write --ignore-path ../.prettierignore --plugin=prettier-plugin-svelte . && eslint --ignore-path ../.prettierignore . --fix",
-		"test": "jest"
+		"test": "vitest --watch=false"
 	},
 	"dependencies": {
 		"@cell-wall/shared": "workspace:*",
-		"@js-temporal/polyfill": "^0.4.1",
+		"@js-temporal/polyfill": "^0.4.4",
 		"lodash.startcase": "^4.4.0"
 	},
 	"devDependencies": {
-		"@jest/globals": "^28.1.0",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.22.4",
 		"@tailwindcss/forms": "^0.5.2",
-		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/svelte": "^4.0.3",
 		"@types/connect": "^3.4.35",
 		"@types/lodash.startcase": "^4.4.7",
 		"@types/tailwindcss": "^3.0.10",
-		"@types/testing-library__jest-dom": "^5.14.3",
 		"cross-env": "^7.0.3",
-		"esbuild-jest": "^0.5.0",
 		"eslint-plugin-svelte": "^2.32.4",
-		"jest": "^28.1.0",
-		"jest-environment-jsdom": "^28.1.0",
+		"jsdom": "^22.1.0",
 		"prettier-plugin-svelte": "^3.0.3",
 		"svelte": "^4.1.2",
 		"svelte-check": "^3.4.6",
-		"svelte-jester": "^3.0.0",
 		"svelte-preprocess": "^5.0.4",
 		"tailwindcss": "^3.0.24",
 		"tslib": "^2.6.1",
 		"typescript": "^5.1.6",
-		"vite": "^4.4.8"
+		"vite": "^4.4.8",
+		"vitest": "^0.34.1"
 	}
 }
