--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -17,25 +17,25 @@
 	"dependencies": {
 		"@cell-wall/client": "workspace:*",
 		"@cell-wall/shared": "workspace:*",
-		"@googleapis/calendar": "^1.0.2",
+		"@fastify/middie": "^8.3.0",
+		"@googleapis/calendar": "^9.1.0",
 		"@js-temporal/polyfill": "^0.4.4",
-		"@octokit/core": "^3.6.0",
+		"@octokit/core": "^5.0.0",
 		"appium-adb": "^9.6.1",
-		"dotenv": "^16.0.1",
-		"fastify": "^3.29.0",
-		"jimp": "^0.16.1",
-		"lowdb": "^3.0.0",
-		"middie": "^6.1.0",
-		"pino-pretty": "^7.6.1",
+		"dotenv": "^16.3.1",
+		"fastify": "^4.21.0",
+		"jimp": "^0.22.10",
+		"lowdb": "^6.0.1",
+		"pino-pretty": "^10.2.0",
 		"ts-extras": "^0.11.0",
-		"ws": "^8.7.0"
+		"ws": "^8.13.0"
 	},
 	"devDependencies": {
-		"@fastify/reply-from": "^7.0.1",
+		"@fastify/reply-from": "^9.4.0",
 		"@jest/globals": "^29.6.2",
 		"@types/appium-adb": "9.4.0",
 		"@types/node": "^16.18.39",
-		"@types/semver": "^7.3.9",
+		"@types/semver": "^7.5.0",
 		"@types/ws": "^8.5.5",
 		"esbuild": "^0.14.38",
 		"esbuild-jest": "^0.5.0",
