--- a/javascript/client/package.json
+++ b/javascript/client/package.json
@@ -21,23 +21,24 @@
 		"lodash.startcase": "^4.4.0"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.22.4",
+		"@sveltejs/adapter-node": "^4.0.1",
+		"@sveltejs/kit": "^2.5.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@tailwindcss/forms": "^0.5.4",
-		"@testing-library/svelte": "^4.0.3",
+		"@testing-library/svelte": "^4.1.0",
 		"@types/connect": "^3.4.35",
 		"@types/lodash.startcase": "^4.4.7",
 		"cross-env": "^7.0.3",
 		"eslint-plugin-svelte": "^2.32.4",
-		"jsdom": "^22.1.0",
+		"jsdom": "^24.0.0",
 		"prettier-plugin-svelte": "^3.0.3",
-		"svelte": "^4.1.2",
-		"svelte-check": "^3.4.6",
-		"svelte-preprocess": "^5.0.4",
+		"svelte": "^4.2.9",
+		"svelte-check": "^3.6.3",
+		"svelte-preprocess": "^5.1.3",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.6.1",
 		"typescript": "^5.1.6",
-		"vite": "^4.4.8",
-		"vitest": "^0.34.1"
+		"vite": "^5.0.12",
+		"vitest": "^1.2.2"
 	}
 }
