Migrate to vitest

--- a/javascript/server/tsconfig.json
+++ b/javascript/server/tsconfig.json
@@ -4,5 +4,5 @@
 		"noEmit": true
 	},
 	"references": [{ "path": "../shared" }],
-	"include": ["src/**/*.d.ts", "src/**/*.ts", "jest.setup.ts"]
+	"include": ["src/**/*.d.ts", "src/**/*.ts", "test.setup.ts"]
 }
