--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -12,7 +12,7 @@
 		"check:watch": "tsc --project . --watch",
 		"lint": "prettier --check . --ignore-path ../.prettierignore && eslint --ignore-path ../.prettierignore .",
 		"format": "prettier --write . --ignore-path ../.prettierignore",
-		"test": "jest"
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@cell-wall/client": "workspace:*",
@@ -32,16 +32,14 @@
 	},
 	"devDependencies": {
 		"@fastify/reply-from": "^9.4.0",
-		"@jest/globals": "^29.6.2",
 		"@types/appium-adb": "9.4.0",
 		"@types/node": "^16.18.39",
 		"@types/semver": "^7.5.0",
 		"@types/ws": "^8.5.5",
 		"esbuild": "^0.14.38",
-		"esbuild-jest": "^0.5.0",
-		"jest": "^29.6.2",
 		"svelte": "^4.2.9",
 		"tslib": "^2.6.1",
-		"typescript": "^5.1.6"
+		"typescript": "^5.1.6",
+		"vitest": "^1.2.2"
 	}
 }
