--- a/javascript/shared/package.json
+++ b/javascript/shared/package.json
@@ -14,14 +14,13 @@
 		"check:watch": "tsc --project . --watch",
 		"lint": "prettier --check . --ignore-path ../.prettierignore && eslint --ignore-path ../.prettierignore .",
 		"format": "prettier --write . --ignore-path ../.prettierignore",
-		"test": "tsc --project test && node --experimental-vm-modules node_modules/jest/bin/jest.js"
+		"test": "vitest"
 	},
 	"dependencies": {
 		"tslib": "^2.6.1"
 	},
 	"devDependencies": {
-		"@jest/globals": "^29.6.2",
-		"jest": "^29.6.2",
-		"typescript": "^5.1.6"
+		"typescript": "^5.1.6",
+		"vitest": "^1.2.2"
 	}
 }
