--- a/javascript/client/package.json
+++ b/javascript/client/package.json
@@ -21,6 +21,7 @@
 		"lodash.startcase": "^4.4.0"
 	},
 	"devDependencies": {
+		"@notwoods/webish": "^0.1.1",
 		"@sveltejs/adapter-node": "^4.0.1",
 		"@sveltejs/kit": "^2.5.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
