--- a/javascript/shared/package.json
+++ b/javascript/shared/package.json
@@ -18,7 +18,9 @@
 	},
 	"dependencies": {
 		"@notwoods/webish": "^0.1.1",
-		"tslib": "^2.6.1"
+		"tslib": "^2.6.1",
+		"type-fest": "4.10.2",
+		"valibot": "^0.28.1"
 	},
 	"devDependencies": {
 		"typescript": "^5.1.6",
